--- a/src/app/layouts/DefaultLayoyt.module.css
+++ b/src/app/layouts/DefaultLayoyt.module.css
@@ -1,10 +1,15 @@
 .wrapper {
   width: 100%;
+  height: 100%;
   padding: 30px 15%;
 }
 
 .wide {
-  padding: 30px 0;
+  padding: 30px 0 0 0;
+}
+
+.wrapper:last-child {
+  padding-bottom: 0;
 }
 
 @media (max-width: 767px) {
@@ -14,5 +19,9 @@
 
   .wide {
     padding: 20px 0;
+  }
+
+  .wrapper:last-child {
+    padding-bottom: 0;
   }
 }
