--- a/src/app/header/Header.module.css
+++ b/src/app/header/Header.module.css
@@ -1,5 +1,6 @@
 .nav {
   display: flex;
+  background-color: var(--color-background-paper);
   justify-content: space-between;
   width: 100%;
   padding: 30px 15%;
