--- a/src/app/layouts/DefaultLayoyt.module.css
+++ b/src/app/layouts/DefaultLayoyt.module.css
@@ -1,11 +1,13 @@
 .wrapper {
   width: 100%;
   height: 100%;
-  padding: 30px 15%;
+  padding: 0 15%;
+  border-top: 2px solid var(--color-primary-dark);
+  border-bottom: 2px solid var(--color-primary-dark);
 }
 
 .wide {
-  padding: 30px 0 0 0;
+  padding: 0;
 }
 
 .wrapper:last-child {
@@ -14,11 +16,7 @@
 
 @media (max-width: 767px) {
   .wrapper {
-    padding: 20px 10%;
-  }
-
-  .wide {
-    padding: 20px 0;
+    padding: 0 10%;
   }
 
   .wrapper:last-child {
