--- a/src/entities/toolbar/ui/Toolbar.module.css
+++ b/src/entities/toolbar/ui/Toolbar.module.css
@@ -1,7 +1,7 @@
 .toolbar {
   position: absolute;
   top: 15px;
-  background-color: rgba(0, 0, 0, 0.322);
+  background-color: var(--color-background-paper);
   overflow: hidden;
   border-radius: 10px;
 }
@@ -9,4 +9,26 @@
 .list {
   display: flex;
   padding: 0 !important;
+}
+
+.widthInput {
+  width: 50%;
+
+  padding: 0 5px;
+}
+
+.colorInput {
+  width: 50%;
+}
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type='number'] {
+  -moz-appearance: textfield;
 }
